feat: Update to new version & redux patterns.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://intranet.chums.com/css/intranet.css?v=1494436263">
     <link rel="stylesheet" type="text/css" href="https://intranet.chums.com/css/chums.css">
-    <!--    <link rel="stylesheet" href="/css/styles.css" />-->
+        <link rel="stylesheet" href="/styles.css" />
     <!--    <link rel="icon" type="image/x-icon" href="/favicon.ico" />-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 </head>
